deploy/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: langwatch-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: langwatch-app
  template:
    metadata:
      labels:
        app: langwatch-app
    spec:
      imagePullSecrets:
      - name: regcred2
      containers:
        - name: langwatch-app
          image: registry.myella.app/langwatch:1
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 512m
              memory: 512Mi
            limits:
              cpu: 2
              memory: 2048Mi
---
apiVersion: v1
kind: Service
metadata:
  name: langwatch-app
spec:
  selector:
    app: langwatch-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
